--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -95,6 +95,12 @@
                                         widget.Init(item.Id);
                                         <div>
                                             <div class='panel panel-default'> 
+                                                @if (widget.DisplayTitle != "")
+                                                {
+                                                    <div class='panel-heading'>
+                                                        @Html.Raw(widget.DisplayTitle)
+                                                    </div>
+                                                }                                                
                                                 <div class='panel-body'>
                                                     @Html.Raw(widget.RenderBody())
                                                 </div> 
@@ -177,9 +183,12 @@
                                     widget.Init(item.Id);
                                     <div>
                                         <div class='panel panel-default'>
-                                            <div class='panel-heading'>
-                                                @Html.Raw(widget.DisplayTitle)
-                                            </div>
+                                            @if (widget.DisplayTitle != "")
+                                            {
+                                                <div class='panel-heading'>
+                                                    @Html.Raw(widget.DisplayTitle)
+                                                </div>
+                                            }
                                             <div class='panel-body'>
                                                 @Html.Raw(widget.RenderBody())
                                             </div>
@@ -238,17 +247,18 @@
                                 foreach (var widget in widgets)
                                 {
                                     widget.Init(item.Id);
-                                    <div>
-                                        <div class='panel panel-default'>
+                                    <div class='panel panel-default'>
+                                        @if (widget.DisplayTitle != "")
+                                        {
                                             <div class='panel-heading'>
                                                 @Html.Raw(widget.DisplayTitle)
                                             </div>
-                                            <div class='panel-body'>
-                                                @Html.Raw(widget.RenderBody())
-                                            </div>
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
+                                        }
+                                        <div class='panel-body'>
+                                            @Html.Raw(widget.RenderBody())
+                                        </div>
+                                        <div class='panel-footer'>
+                                            @Html.Raw(widget.Footer)
                                         </div>
                                     </div>
                                 }
@@ -275,7 +285,20 @@
                                     foreach (var widget in widgets)
                                     {
                                         widget.Init(item.Id);
-                                        Html.Raw(widget.RenderBody());
+                                        <div class='panel panel-default'>
+                                            @if (widget.DisplayTitle != "")
+                                            {
+                                                <div class='panel-heading'>
+                                                    @Html.Raw(widget.DisplayTitle)
+                                                </div>
+                                            }
+                                            <div class='panel-body'>
+                                                @Html.Raw(widget.RenderBody())
+                                            </div>
+                                            <div class='panel-footer'>
+                                                @Html.Raw(widget.Footer)
+                                            </div>
+                                        </div>
                                     }
                                 }
                             </div>
@@ -347,8 +370,19 @@
                                     foreach (var widget in widgets)
                                     {
                                         widget.Init(item.Id);
-                                        <div>
-                                            @Html.Raw(widget.RenderBody())
+                                        <div class='panel panel-default'>
+                                            @if (widget.DisplayTitle != "")
+                                            {
+                                                <div class='panel-heading'>
+                                                    @Html.Raw(widget.DisplayTitle)
+                                                </div>
+                                            }
+                                            <div class='panel-body'>
+                                                @Html.Raw(widget.RenderBody())
+                                            </div>
+                                            <div class='panel-footer'>
+                                                @Html.Raw(widget.Footer)
+                                            </div>
                                         </div>
                                     }
                                 }
