--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_Footer.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_Footer.cshtml
@@ -47,9 +47,20 @@
                             var widgets = GlobalConfig.Widgets.Where(x => x.WidgetId == item.WidgetId).ToList();
                             foreach (var widget in widgets)
                             {
-                                widget.Init();
-                                <div>
-                                    @Html.Raw(widget.RenderBody())
+                                widget.Init(item.Id);
+                                <div class='panel panel-default'>
+                                    @if (widget.DisplayTitle != "")
+                                    {
+                                        <div class='panel-heading'>
+                                            @Html.Raw(widget.DisplayTitle)
+                                        </div>
+                                    }
+                                    <div class='panel-body'>
+                                        @Html.Raw(widget.RenderBody())
+                                    </div>
+                                    <div class='panel-footer'>
+                                        @Html.Raw(widget.Footer)
+                                    </div>
                                 </div>
                             }
                         }
