--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_FullWidthSlider.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_FullWidthSlider.cshtml
@@ -10,20 +10,8 @@
                     var widgets = GlobalConfig.Widgets.Where(x => x.WidgetId == item.WidgetId).ToList();
                     foreach (var widget in widgets)
                     {
-                        widget.Init();
-                        @*<div>
-                            <div class='panel panel-default'>
-                                <div class='panel-heading'>
-                                    @Html.Raw(widget.RenderTitle())
-                                </div>
-                                <div class='panel-body'>*@
-                        @Html.Raw(widget.RenderBody())
-                        @*</div>
-                                    <div class='panel-footer'>
-                                        @Html.Raw(widget.RenderFooter())
-                                    </div>
-                                </div>
-                            </div>*@
+                        widget.Init(item.Id);
+                        Html.Raw(widget.RenderBody());
                     }
                 }
             </div>
