New html display Widget added

--- a/NetCoreCMS.Web/Views/Home/RestartHost.cshtml
+++ b/NetCoreCMS.Web/Views/Home/RestartHost.cshtml
@@ -17,7 +17,7 @@ var count = 5;
 // Update the count down every 1 second
 var x = setInterval(function() {    
     if (count <= 0) {
-        document.getElementById("showText").innerHTML = "Go <a href='/' >Home</a> Now";
+        document.getElementById("showText").innerHTML = "Redirecting to <a href='/' >Home</a>";
         window.location.replace("/");
     }
     else {
